# xiaoXBao-MCPs

./: Makefile  README.md  pyproject.toml  repo_init.sh
.github/workflows/: ci.yaml
api_gateway/: main.py
infra/docker/: Dockerfile
infra/helm/: Chart.yaml  values.yaml
services/oncology_kb/: constants.py  kb_tool.py  main.py
services/psychology/: constants.py  main.py  risk_tool.py
services/radiology/: constants.py  followup_recommender.py  main.py  nlp_tool.py
services/vision/: constants.py  image_loader.py  main.py  vision_tool.py
shared/adapters/: deepseek.py  gemini.py
shared/models/: __init__.py  errors.py  mcp_outputs.py
shared/utils/: __init__.py  budget_guard.py  llm_router.py  metrics.py  safety_middleware.py
tests/: conftest.py  test_budget_guard.py  test_deepseek.py  test_gemini.py  test_oncology_kb_service.py  test_psychology_service.py  test_radiology_service.py  test_router.py  test_safety_middleware.py  test_vision_service.py
tests/load/: test_load.py
tests/redteam/: test_prompt_injection.py
